--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,24 @@
-# Homepage/User info and survey input
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>DHRSurvey</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  </head>
+  <body>
+      <div class="banner">
+        <h1>DHR Health</h1>
+        <h3> Patient Survey</h3>
+      </div>
+      <div class="inputs">
+        <form action="/new_survey/create" id="submission" method="POST" enctype="multipart/form-data">
+          <label for="first">First name:</label>
+          <input type="text" id="first" name="first"><br><br>
+          <label for="last">Last name:</label>
+          <input type="text" id="last" name="last"><br><br>
+          <label for="phone">Phone #:</label>
+          <input type="tel" id="phone" name="phone"><br><br>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+  </body>
+</html>
