--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
   <head>
     <title>DHRSurvey</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="/stylesheets/homepage.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
       <div class="banner">
@@ -15,10 +16,16 @@
           <input type="text" id="first" name="first"><br><br>
           <label for="last">Last name:</label>
           <input type="text" id="last" name="last"><br><br>
-          <label for="phone">Phone #:</label>
+          <label for="phone">Phone (xxx xxx xxxx):</label>
           <input type="tel" id="phone" name="phone"><br><br>
-          <input type="submit" value="Submit">
+          <input type="submit" id="submit" value="Submit">
+          <span role="alert" id="nameError" aria-hidden="true">
+		    Missing or Incorrect Field
+		  </span>
         </form>
       </div>
+
+      <script src="/js/validate.js"></script>
+
   </body>
 </html>
