--- a/views/index.erb
+++ b/views/index.erb
@@ -18,6 +18,38 @@
           <input type="text" id="last" name="last"><br><br>
           <label for="phone">Phone (xxx xxx xxxx):</label>
           <input type="tel" id="phone" name="phone"><br><br>
+          <!-- <div class="rSystem" id="filled" hidden="false"> -->
+	          <span>Courtesy of staff who admitted you</span>
+	          	<fieldset class="rating">
+		          	<input type="radio" id="courtNeg" name="rating1" value="1" />
+		          	<input type="radio" id="courtNeu" name="rating1" value="2" />
+		          	<input type="radio" id="courtPos" name="rating1" value="3" />
+	          	</fieldset>
+	          <span>Room cleanliness</span>
+	          	<fieldset class="rating">
+		          	<input type="radio" id="roomNeg" name="rating2" value="1" />
+		          	<input type="radio" id="roomNeu" name="rating2" value="2" />
+		          	<input type="radio" id="roomPos" name="rating2" value="3" />
+	          	</fieldset>
+	          <span>Noise level in and around your room</span>
+	          	<fieldset class="rating">
+		          	<input type="radio" id="noiseNeg" name="rating3" value="1" />
+		          	<input type="radio" id="noiseNeu" name="rating3" value="2" />
+		          	<input type="radio" id="noisePos" name="rating3" value="3" />
+	          	</fieldset>
+	          <span>Quality of food</span>
+	          	<fieldset class="rating">
+		          	<input type="radio" id="foodNeg" name="rating4" value="1" />
+		          	<input type="radio" id="foodNeu" name="rating4" value="2" />
+		          	<input type="radio" id="foodPos" name="rating4" value="3" />
+	          	</fieldset>
+	          <span>Friendliness/courtesy of nurses</span>
+	          	<fieldset class="rating">
+		          	<input type="radio" id="friendNeg" name="rating5" value="1" />
+		          	<input type="radio" id="friendNeu" name="rating5" value="2" />
+		          	<input type="radio" id="friendPos" name="rating5" value="3" />
+	          	</fieldset>
+	        <!-- </div> -->
           <input type="submit" id="submit" value="Submit">
           <span role="alert" id="nameError" aria-hidden="true">
 		    Missing or Incorrect Field
@@ -26,6 +58,8 @@
       </div>
 
       <script src="/js/validate.js"></script>
-
+      <script src="/js/filled.js"></script>
+      
+      
   </body>
 </html>
