--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
           <label for="last">Last name:</label>
           <input type="text" id="last" name="last"><br><br>
           <label for="phone">Phone (xxx xxx xxxx):</label>
-          <input type="tel" id="phone" name="phone"><br><br>
+          <input type="integer" id="pat_phone" name="pat_phone"><br><br>
           <!-- <div class="rSystem" id="filled" hidden="false"> -->
 	          <span>Courtesy of staff who admitted you</span>
 	          	<fieldset class="rating">
