--- a/views/index.erb
+++ b/views/index.erb
@@ -16,39 +16,54 @@
           <input type="text" id="first" name="first"><br><br>
           <label for="last">Last name:</label>
           <input type="text" id="last" name="last"><br><br>
-          <label for="phone">Phone (xxx xxx xxxx):</label>
+          <label for="phone">Phone (XXX)XXX-XXXX:</label>
           <input type="integer" id="pat_phone" name="pat_phone"><br><br>
           <!-- <div class="rSystem" id="filled" hidden="false"> -->
 	          <span>Courtesy of staff who admitted you</span>
 	          	<fieldset class="rating">
+	          		<label>Bad</label>
 		          	<input type="radio" id="courtNeg" name="rating1" value="1" />
+		          	<label>Neutral</label>
 		          	<input type="radio" id="courtNeu" name="rating1" value="2" />
-		          	<input type="radio" id="courtPos" name="rating1" value="3" />
-	          	</fieldset>
+		          	<label>Excellent</label>
+		          	<input type="radio" id="courtPos" name="rating1" value="3" checked/>
+	          	</fieldset><br><br>
 	          <span>Room cleanliness</span>
 	          	<fieldset class="rating">
+	          		<label>Bad</label>
 		          	<input type="radio" id="roomNeg" name="rating2" value="1" />
+		          	<label>Neutral</label>
 		          	<input type="radio" id="roomNeu" name="rating2" value="2" />
-		          	<input type="radio" id="roomPos" name="rating2" value="3" />
-	          	</fieldset>
+		          	<label>Excellent</label>
+		          	<input type="radio" id="roomPos" name="rating2" value="3" checked/>
+	          	</fieldset><br><br>
 	          <span>Noise level in and around your room</span>
 	          	<fieldset class="rating">
+	          		<label>Bad</label>
 		          	<input type="radio" id="noiseNeg" name="rating3" value="1" />
+		          	<label>Neutral</label>
 		          	<input type="radio" id="noiseNeu" name="rating3" value="2" />
-		          	<input type="radio" id="noisePos" name="rating3" value="3" />
-	          	</fieldset>
+		          	<label>Excellent</label>
+		          	<input type="radio" id="noisePos" name="rating3" value="3" checked/>
+	          	</fieldset><br><br>
 	          <span>Quality of food</span>
 	          	<fieldset class="rating">
+	          		<label>Bad</label>
 		          	<input type="radio" id="foodNeg" name="rating4" value="1" />
+		          	<label>Neutral</label>
 		          	<input type="radio" id="foodNeu" name="rating4" value="2" />
-		          	<input type="radio" id="foodPos" name="rating4" value="3" />
-	          	</fieldset>
+		          	<label>Excellent</label>
+		          	<input type="radio" id="foodPos" name="rating4" value="3" checked/>
+	          	</fieldset><br><br>
 	          <span>Friendliness/courtesy of nurses</span>
 	          	<fieldset class="rating">
+	          		<label>Bad</label>
 		          	<input type="radio" id="friendNeg" name="rating5" value="1" />
+		          	<label>Neutral</label>
 		          	<input type="radio" id="friendNeu" name="rating5" value="2" />
-		          	<input type="radio" id="friendPos" name="rating5" value="3" />
-	          	</fieldset>
+		          	<label>Excellent</label>
+		          	<input type="radio" id="friendPos" name="rating5" value="3" checked/>
+	          	</fieldset><br><br>
 	        <!-- </div> -->
           <input type="submit" id="submit" value="Submit">
           <span role="alert" id="nameError" aria-hidden="true">
