--- a/views/survey_completed.erb
+++ b/views/survey_completed.erb
@@ -1,1 +1,5 @@
 # Survey already submitted Thank you
+
+<form action="/about" id="about" method="GET" enctype="multipart/form-data">
+	<input type="submit" value="About">
+</form>
