--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -10,3 +10,28 @@
 input.invalid {
   border-color: red;
 }
+
+.bg{
+  background-color: rgb(0, 164, 153);
+}
+
+.page {
+  font-family: "Montserrat", sans-serif;
+}
+
+.masthead {
+  padding-top: calc(2rem + 20px);
+  padding-bottom: calc(2rem + 20px);
+  background-color: rgb(0, 164, 153);
+  font-family: "Montserrat", sans-serif;
+}
+.masthead .masthead-heading {
+  font-size: 1.50rem;
+  line-height: 1.75rem;
+}
+.masthead .masthead-subheading {
+  font-size: 1.25rem;
+}
+.masthead .masthead-avatar {
+  width: 22rem;
+}
