--- a/views/index.erb
+++ b/views/index.erb
@@ -3,15 +3,24 @@
   <head>
     <title>DHRSurvey</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/homepage.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/styles.css" rel="stylesheet" />
   </head>
-  <body>
-      <div class="banner">
-        <h1>DHR Health</h1>
-        <h3> Patient Survey</h3>
-      </div>
-      <div class="inputs">
-        <form action="/new_survey/create" id="submission" method="POST" enctype="multipart/form-data">
+  <body class="page">
+  	<header class="masthead text-white text-center">
+        <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image-->
+                <img class="masthead-avatar mb-3" src="/images/logo.png"/>
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0">Patient Survey</h1>
+        </div>
+    </header>
+
+    <div class="card text-center">
+	  <div class="card-body">
+	  	<form action="/new_survey/create" id="submission" method="POST" enctype="multipart/form-data">
           <label for="first">First name:</label>
           <input type="text" id="first" name="first"><br><br>
           <label for="last">Last name:</label>
@@ -65,12 +74,15 @@
 		          	<input type="radio" id="friendPos" name="rating5" value="3" checked/>
 	          	</fieldset><br><br>
 	        <!-- </div> -->
-          <input type="submit" id="submit" value="Submit">
+	  </div>
+	  <div class="card-footer text-muted">
+	  	<input type="submit" id="submit" value="Submit">
           <span role="alert" id="nameError" aria-hidden="true">
 		    Missing or Incorrect Field
 		  </span>
         </form>
-      </div>
+	  </div>
+	</div>
 
       <script src="/js/validate.js"></script>
             
