Code Cleanup more validation
- Properly validate radio buttons for submission
- Clear form on back button press

--- a/views/survey_completed.erb
+++ b/views/survey_completed.erb
@@ -6,13 +6,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/homepage.css" media="screen" rel="stylesheet" type="text/css"/>
-    <link href="/stylesheets/styles.css" rel="stylesheet" />
   </head>
   <body class="page bg">
   	<header class="masthead text-white text-center" style="padding-top: 20%;">
         <div class="container d-flex align-items-center flex-column" style="padding-bottom: 5%;">
         	<!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-3" src="/images/logo.png"/>
+            <img class="masthead-avatar mb-3" src="https://i.imgur.com/zttpaZw.png"/>
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb-0">Thank You</h1>
             <h6 class="info"> DHR records already show a survey response submitted on 
